--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Разноцветные квадраты</title>
+    <title>Площадь треугольника</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+    <form name="forma3">
+        Сторона 1 <input type="text" size="8" maxlength="8" name="st1">
+        Сторона 2 <input type="text" size="8" maxlength="8" name="st2">
+        Сторона 3 <input type="text" size="8" maxlength="8" name="st3"><br><br>
 
+
+        <input type="button" value="Вычеслить" onClick="areaOfTriangle(forma3);">
+        <input type="reset" value="Отменить">
+        Результат <input type="text" size="8" maxlength="8" name="res">
+ </form>
 </body>
 </html>
