--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+    <div class="treangle">
+        <h1>Площадь треугольника</h1>
     <form name="forma3">
         Сторона 1 <input type="text" size="8" maxlength="8" name="st1">
         Сторона 2 <input type="text" size="8" maxlength="8" name="st2">
@@ -16,6 +18,22 @@
         <input type="button" value="Вычеслить" onClick="areaOfTriangle(forma3);">
         <input type="reset" value="Отменить">
         Результат <input type="text" size="8" maxlength="8" name="res">
- </form>
+    </form>
+</div>
+<div class="sqwer">
+    <h1>Площадь квадрата</h1>
+    <form name="forma4">
+        Сторона 1 <input type="text" size="8" maxlength="8" name="st1">
+        Сторона 2 <input type="text" size="8" maxlength="8" name="st2">
+        Сторона 3 <input type="text" size="8" maxlength="8" name="st3">
+        Сторона 4 <input type="text" size="8" maxlength="8" name="st4"><br><br>
+
+
+        <input type="button" value="Вычеслить" onClick="areaOfSqwer(forma4);">
+        <input type="reset" value="Отменить">
+        Результат <input type="text" size="8" maxlength="8" name="resize">
+
+    </form>
+</div>
 </body>
 </html>
